--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
-<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="EditText" android:id="@+id/ed_feld"></EditText>
-<Button 
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content" 
-	android:id="@+id/sf_neuerButton" 
-	android:text="@string/sf_neuerButton" 
-	android:onClick="clickSubActivity">
-</Button>
-<Button 
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content" 
-	android:id="@+id/sf_subactivity" 
-	android:text="@string/subactivity" android:onClick="clickSubactivity">
-</Button>
+	android:layout_height="fill_parent" android:orientation="vertical"
+	android:layout_width="fill_parent">
+	<TextView android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:text="@string/hello" />
+
+	<EditText android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:text="EditText"
+		android:id="@+id/ed_feld">
+	</EditText>
+
+	<Button 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" 
+		android:id="@+id/sf_neuerButton"
+		android:text="@string/sf_neuerButton" 
+		android:onClick="clickSubActivity">
+	</Button>
+
+	<Button 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" 
+		android:id="@+id/sf_subactivity"
+		android:text="@string/sf_subactivity" 
+		android:onClick="clickSubActivity">
+	</Button>
 </LinearLayout>
