--- a/res/layout/subactivity.xml
+++ b/res/layout/subactivity.xml
@@ -8,5 +8,5 @@
   <TextView 
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
-  	android:text="@string/subactivity" android:id="@+id/tf_text"/>
+  	android:text="@string/sf_subactivity" android:id="@+id/tf_text"/>
 </LinearLayout>
